8 December 2006: Wouter
	- Moved down max XFRD UDP sockets for zone transfer queries to 100
	  down from 300. This makes the total socket max at 200, so it fits
	  easily under 256 ulimit (a common default).

7 December 2006: Wouter
	- Improved error message to help operator.
	- created 3.0.3 svn tag.
	- default of zonesdir corrected (no directory is default).

4 December 2006: Wouter
	- updated test packages. Moved 213_large from manual to long.
	  size_0, source_port_0 made more working (needs root permission).

1 December 2006: Wouter
	- Moved xfrd ipc and reload handlers to front of event handler
	  lists for a 10% speedup in xfrd.
	- Fixed so that NSD no longer interrupts zone transfers when
	  a notify comes in for that zone. Added package to test it.
	- Fixed warning on Solaris 10.

30 November 2006: Wouter
	- Test for fallback in getaddrinfo more portable.
	  Ported to FreeBSD 6.1 without inet6.
	- New quit sync had a problem with blocking in dispatch. Fixed.
	- reload will retry quit_sync if nothing happens.
	- parent tries to empty the pipes before closing them on quitsync.
	- xfrd does not send reload when previous reload request busy.
	- netio will only deliver the number of bits from select
	  and then stop. Optimisation.

29 November 2006: Wouter
	- Fixed getaddrinfo error message to be more descriptive.
	- Fallback to ip4 also if getaddrinfo fails for ip6.
	- instead of EAI_ADDRFAMILY uses EAI_FAMILY which is portable
	  to FreeBSD.
	- signed/unsigned warning fix for FD_SETSIZE comparison.
	- Lots of debug statements and new quit sync feature, where
	  the server children are synced with. So as not to lose buffers.

28 November 2006: Wouter
	- Debugging 10k zones transfer, set so that zones waiting for a
	  socket do not get timeouts.
	- Debug change so that an event is only returned to one handler
	  by netio.
	  Reversed this. Netio will not deliver events you do not listen
	  to, and since xfrd first listens to write then read, it will